# Trump_Tracking

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  IDEAS.md  Issues.md  Makefile  Procfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-ingest.yml
agents/: ORCHESTRATOR.md  README.md  backend-agent.md  database-agent.md  design-agent.md  devops-agent.md  editorial-agent.md  fact-check-agent.md  frontend-agent.md  implementation-agent.md  research-agent.md  security-reliability-agent.md
agents/evals/: README.md
agents/evals/backend/: rubric.md
agents/references/: backend.md  database.md  design.md  devops.md  editorial.md  fact-check.md  frontend.md  implementation.md  research.md  security-reliability.md
agents/scorecards/: README.md  weekly-template.md
agents/templates/: database_migration_spec.md  deployment_report.md  design_change_brief.md  editorial_decision.json  fact_check_packet.json  frontend_feature_spec.md  handoff_payload.json  implementation_change_spec.md  research_candidate.json  security_incident_report.md
backend/: __init__.py
backend/app/: crud.py  db.py  main.py  models.py  schemas.py  seed.py
backend/scripts/: daily_pipeline.py
data/inbox/: 2026-02-23.jsonl  README.md
docs/: AI_HANDOFF.md  agent_roles.md  architecture.md  automation_and_hosting.md  backfill_targets.md  deploy_render_neon.md  design_refresh_plan.md  review_workflow.md  source_tier_policy.md
scripts/: bump_static_asset_version.sh  publish_and_ingest.sh
tests/: test_api.py
(+171 files in other folders)
