[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trump-tracking"
version = "0.1.0"
description = "Evidence-first quote and claim tracking MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "pydantic>=2.10.6",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.1",
  "ruff>=0.9.9"
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
